# DucNguyen_LearningSpace

1shot-e2e-coding-agent/: .env.example  .gitignore  Dockerfile.devbox  README.md  SPEC-donot use.md  SPEC.md  agent.sh  docker-compose.yml  initial_requirement.md  package.json  tsconfig.json  vitest.config.ts
ai-estimation-util/: ai-cost-estimation.md
ai-log-analysis/: .coverage  .gitignore  README.md  config.yaml  debug_key.py  demo.py  main.py  newrelic_health_assessment.ipynb  requirements.txt  test_api.py  test_key.py  test_network.py
ai-monitoring/: SPEC.md  SPEC.md.backup  SPEC.md.old  design-information copy.md  design-information.md  design.puml
consultant-board-ai/: multi-agent-debate.md
duc-testing-loan/: .gitignore  CS 6300: Software Development Process.md  Syllabus (Spring 2026).docx
knowledge-base-ai/: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  start 2.sh
large-context/: common-context-management-strategies.md  context-management-strategies.md
python-calculator/: .gitignore  calculator.py  pyproject.toml
python-calculator/tests/: test_calculator.py
retail-shelf-ai/: .env.example  .gitignore  alembic.ini  bedrock_example.py  requirements.txt  retail_shelf.db
retail-shelf-monitoring/: .env.example  .gitignore  README.md  SPECIFICATION.md  alembic.ini  requirements-dev.txt  requirements.txt
stocktrader/: .gitignore  Fundamental_Metrics_Guide.html  Fundamental_Metrics_Guide.md  PROJECT_ARCHITECTURE.md  StockTrader_PRD.md  requirements.txt
ucp-commerce-ai/: ucp_spec.md
(+440 files in other folders)
